# ZavodVarnaPot-deploy

./: README.md  app.py  data_izpis.csv  pyproject.toml  requirements.txt
assets/: style.css
